--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,2 @@
-*.sqlite3
-/awantura_o_kase/awantura_o_kase/__pycache__
-/awantura_o_kase/panel_admin/migrations/__pycache__
+awantura_o_kase\db.sqlite3
+awantura_o_kase\panel_admin\__pycache__\
