Dodanie licznika rund

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 awantura_o_kase\db.sqlite3
 awantura_o_kase\panel_admin\__pycache__\
+awantura_o_kase\panel_admin\migrations\__pycache__\
+awantura_o_kase\awantura_o_kase\__pycache__\
