--- a/stream_overlay/package.json
+++ b/stream_overlay/package.json
@@ -29,6 +29,7 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
+    "unplugin-fonts": "^1.1.1",
     "vite": "^5.4.1"
   }
 }
