--- a/stream_overlay/package.json
+++ b/stream_overlay/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.7.7",
     "postcss-import": "^16.1.0",
     "react": "^18.3.1",
+    "react-countdown": "^2.3.6",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0",
     "stream_overlay": "file:"
   },
   "devDependencies": {
