--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@mantine/core": "^8.2.2",
     "@mantine/hooks": "^8.2.2",
     "react": "^19.1.0",
+    "react-countdown": "^2.3.6",
     "react-dom": "^19.1.0",
     "react-router": "^7.7.1"
   },
