--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "postcss-simple-vars": "^7.0.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.1",
+    "unplugin-fonts": "^1.4.0",
     "vite": "^7.0.0"
   }
 }
